--- a/css/style.css
+++ b/css/style.css
@@ -1,59 +1,101 @@
-body {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #ffffff; 
-    color: #000000; 
-}
-header, footer {
-    background-color: #6DA676; 
-    color: #ffffff; 
-    padding: 20px;
-    text-align: left;
-}
-nav {
-    background-color: #6DA676; 
-    color: #ffffff; 
-    text-align: center;
-    padding: 10px 0;
-}
-nav a {
-    color: #ffffff; 
-    text-decoration: none;
-    margin: 0 20px;
-}
-nav a:hover {
-    text-decoration: underline;
-}
-.container {
-    margin: 20px;
-}
-.hero {
-    display: flex;
-    align-items: center;
-    margin-top: 50px;
-}
-.hero img {
-    width: 200px; 
-    height: auto;
-    border: 5px solid #6DA676;
-    border-radius: 50%; 
-    margin-right: 20px;
+.hero h1 {
+    position: absolute;
+    width: 406px;
+    height: 37px;
+   padding-left: 200px;
+    top: 163px;
+    padding-top: 100px;
+
+    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 37px;
+    color: #000000;
+
+    
+    
 }
 .hero p {
-    flex: 1;
+   
+   
+    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 32px;
+    
+    color: #000000;
+    padding-left: 200px;
+    padding-top: 150px;
+    padding-right: 300px;
 }
-.skills {
-    margin-top: 50px;
+
+.skills h1{
+    text-align: right;
+    padding: 60px;
+    padding-right: 10px;
+    font-size: 70px;
+    padding-top: 0px;
 }
-.skills-row {
+.button {
+    background-color: #6da676;
+        border: none;
+        color: #000000;
+        padding: 15px 34px;
+        text-align: center;
+        font-weight: bolder;
+        display: inline-block;
+        font-size: 17px;
+        margin: 5px;
+        
+        position: relative;
+        width: 280px;
+        border-radius: 12px;
+        font-family: 'Inika';
+        text-decoration: underline
+
+}
+
+.row1 img {
+    width: 300px;
+    height: 300px;
+
+}
+.row1 h1 {
+    text-align: right;
+    padding-right: 20px;
+    font-size: 30px;
+}
+.work2 img{
+    
+width: 188px;
+height: 388px;
+left: 459px;
+top: 1304px;
+border-radius: 20px;
+padding-left: 50px;
+}
+.work3 img {
+
+border-radius: 20px;
+width: 527px;
+height: 388px;
+padding-left: 100px;
+
+
+}
+.row {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
 }
-.skills-row p {
-    flex: 0 1 calc(33.33% - 10px); 
-    background-color: #f0f0f0; 
-    padding: 20px;
-    border-radius: 5px;
+.work1 {
+    text-align: center;
+}
+.work1 p {
+    margin: 50px;
+}
+.work1 h2 {
+    padding-top: 90px;
 }
