--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,17 @@
         text-decoration: underline
 
 }
+.Logo img {
+    width: 80px;
+    height: 80px;
 
+}
+
+.Logo {
+    font-size: 50px;
+    font-family: 'Montserrat';
+    
+}
 .row1 img {
     width: 300px;
     height: 300px;
@@ -79,7 +89,7 @@ border-radius: 20px;
 padding-left: 50px;
 }
 .work3 img {
-
+    
 border-radius: 20px;
 width: 527px;
 height: 388px;
@@ -91,11 +101,14 @@ padding-left: 100px;
     display: flex;
 }
 .work1 {
+    font-family: 'Montserrat';
     text-align: center;
 }
 .work1 p {
+    font-family: 'Montserrat';
     margin: 50px;
 }
 .work1 h2 {
+    font-family: 'Montserrat';
     padding-top: 90px;
 }
